--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div className="bg-[#0D0D0D] min-h-screen font-sans text-[#D3F2B3] relative">
                     <ComplianceModal show={showComplianceModal} onConfirm={handleModalConfirm} onCancel={() => setShowComplianceModal(false)} />
                     <button onClick={toggleFullscreen} className="absolute top-4 left-4 z-10 p-2 rounded-full bg-gray-700 hover:bg-gray-600 transition text-gray-200" title={isFullscreen ? "Exit Fullscreen" : "Enter Fullscreen"}>{isFullscreen ? <IconFullscreenExit /> : <IconFullscreenEnter />}</button>
-                    <a href="/" className="absolute top-4 right-4 z-10 p-1 rounded-full bg-gray-700/50 hover:bg-gray-600/50 transition" title="Back to Homepage"><img src="https://raw.githubusercontent.com/navasdo/oliver/main/navacite/gems/Navacite-Main.png" alt="Navacite Homepage" className="w-10 h-10 rounded-full"/></a>
+                    <a href="https://navacite.vercel.app" className="absolute top-4 right-4 z-10 p-1 rounded-full bg-gray-700/50 hover:bg-gray-600/50 transition" title="Back to Homepage"><img src="https://raw.githubusercontent.com/navasdo/oliver/main/navacite/gems/Navacite-Main.png" alt="Navacite Homepage" className="w-10 h-10 rounded-full"/></a>
                     <div className="container mx-auto p-4 sm:p-6 lg:p-8">
                         <header className="text-center mb-8">
                             <img src="https://raw.githubusercontent.com/navasdo/oliver/refs/heads/main/navacite-tng/images/Navacite-TNG.png" alt="App Gem" className="w-48 mx-auto mb-4 [filter:drop-shadow(0_0_15px_rgba(255,255,255,0.3))]"/>
