--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 ${ComplianceModalHTML()}
                 ${GlossaryModalHTML()}
                 <button id="fullscreen-toggle" class="absolute top-4 left-4 z-10 p-2 rounded-full bg-gray-700 hover:bg-gray-600 transition text-gray-200" title="${state.isFullscreen ? "Exit Fullscreen" : "Enter Fullscreen"}">${isFullscreenIcon}</button>
-                <a href="https://navaicite.vercel.app" class="absolute top-4 right-4 z-10 p-1 rounded-full bg-gray-700/50 hover:bg-gray-600/50 transition" title="Back to Homepage"><img src="https://raw.githubusercontent.com/navasdo/oliver/main/navacite/gems/Navacite-Main.png" alt="Navacite Homepage" class="w-10 h-10 rounded-full"/></a>
+                <a href="https://navacite.vercel.app" class="absolute top-4 right-4 z-10 p-1 rounded-full bg-gray-700/50 hover:bg-gray-600/50 transition" title="Back to Homepage"><img src="https://raw.githubusercontent.com/navasdo/oliver/main/navacite/gems/Navacite-Main.png" alt="Navacite Homepage" class="w-10 h-10 rounded-full"/></a>
                 <div class="container mx-auto p-4 sm:p-6 lg:p-8">
                     <header class="text-center mb-8">
                         <img src="https://raw.githubusercontent.com/navasdo/oliver/refs/heads/main/navacite-tng/images/Navacite-TNG.png" alt="App Gem" class="w-48 mx-auto mb-4 [filter:drop-shadow(0_0_15px_rgba(255,255,255,0.3))]"/>
